# bhc

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  mise.toml
.claude/: CLAUDE.md  ROADMAP.md  TODO-package-deps.md  TODO-pandoc-check.md  TODO-pandoc.md  drift-builtin-lists.py  drift-part1-regressors.txt  xmonad-progress.md
.claude/rules/: 007-ir-design.md  013-optimization.md
.github/release-notes/: v0.2.2.md
.github/workflows/: ci.yml  docs.yml  playground.yml  release.yml
crates/bhc/: Cargo.toml
crates/bhc-arena/: Cargo.toml
crates/bhc-arena/src/: lib.rs
crates/bhc-ast/: Cargo.toml
crates/bhc-ast/src/: lib.rs
crates/bhc-codegen/: Cargo.toml
crates/bhc-codegen/src/: lib.rs
crates/bhc-codegen/src/llvm/: context.rs  loop_lower.rs  lower.rs  module.rs
crates/bhc-core/: Cargo.toml
crates/bhc-core/src/: demand.rs  escape.rs  lib.rs  pretty.rs  specialize.rs  uarray.rs  worker_wrapper.rs
crates/bhc-data-structures/: Cargo.toml
crates/bhc-data-structures/src/: lib.rs
crates/bhc-diagnostics/: Cargo.toml
crates/bhc-diagnostics/src/: explain.rs  json.rs  lib.rs  lsp.rs  render.rs
crates/bhc-driver/: Cargo.toml
crates/bhc-driver/src/: cpp.rs  lib.rs  report.rs
crates/bhc-driver/tests/: data_tree_node.rs  directory_builtin_scheme.rs  injective_type_family_methods.rs  integration.rs  module_reexport_constructor.rs  optional_scheme.rs  parsec_anytoken_reexport.rs  parsec_try_scheme.rs  qname_record_construction.rs  qualified_import_no_leak.rs  skylighting_aliases.rs  sum_polymorphic.rs  tuple_functor.rs
crates/bhc-e2e-tests/: differential.py
crates/bhc-e2e-tests/src/: golden.rs  (+4 more)
crates/bhc-ffi/: Cargo.toml
crates/bhc-ffi/src/: blas.rs  lib.rs  pinned.rs  tensor.rs
crates/bhc-ffi/tests/: m4_exit_criteria.rs
crates/bhc-gpu/: Cargo.toml
crates/bhc-gpu/src/: context.rs  device.rs  kernel.rs  lib.rs  lower.rs  memory.rs  transfer.rs
crates/bhc-gpu/src/codegen/: amdgcn.rs  metal.rs  mod.rs  ptx.rs  spirv.rs  wgsl.rs
crates/bhc-gpu/src/runtime/: cuda.rs  metal.rs  mod.rs  rocm.rs
crates/bhc-hir/: Cargo.toml
crates/bhc-hir-to-core/: Cargo.toml
crates/bhc-index/: Cargo.toml
crates/bhc-index/src/: lib.rs
crates/bhc-interface/: Cargo.toml
crates/bhc-intern/: Cargo.toml
crates/bhc-intern/src/: lib.rs
crates/bhc-lexer/: Cargo.toml
crates/bhc-lexer/src/: lib.rs  token.rs
crates/bhc-linker/: Cargo.toml
crates/bhc-linker/src/: lib.rs
crates/bhc-loop-ir/: Cargo.toml
crates/bhc-loop-ir/src/: lib.rs  lower.rs  parallel.rs  vectorize.rs
crates/bhc-lower/: Cargo.toml
crates/bhc-lower/src/: context.rs  desugar.rs  lib.rs  loader.rs  lower.rs  resolve.rs  th_expand.rs
crates/bhc-lsp/: Cargo.toml
crates/bhc-macros/: Cargo.toml
crates/bhc-macros/src/: lib.rs
crates/bhc-package/: Cargo.toml
crates/bhc-package/src/: cabal.rs  commands.rs  hackage.rs  lib.rs  lockfile.rs  registry.rs  resolve.rs
crates/bhc-parser/: Cargo.toml
crates/bhc-parser/src/: decl.rs  expr.rs  lib.rs  pattern.rs  types.rs
crates/bhc-parser/tests/: nested_let_layout.rs  overlapping_instance.rs  recursion_limit.rs  view_pattern_in_tuple.rs  xmonad.rs
crates/bhc-playground/: Cargo.toml
crates/bhc-query/: Cargo.toml
crates/bhc-query/src/: lib.rs
crates/bhc-session/: Cargo.toml
crates/bhc-session/src/: lib.rs
crates/bhc-span/: Cargo.toml
crates/bhc-span/src/: lib.rs
crates/bhc-target/: Cargo.toml
crates/bhc-target/src/: lib.rs
crates/bhc-tensor-ir/: Cargo.toml
crates/bhc-tensor-ir/src/: fusion.rs  lib.rs  lower.rs
crates/bhc-typeck/: Cargo.toml
crates/bhc-types/: Cargo.toml
crates/bhc-wasm/: Cargo.toml
demos/: 01-hello.hs  02-types.hs  03-roman.hs  04-repl.txt  README.md
docs/: examples.md  getting-started.md  index.md  language.md  profiles.md
docs/drafts/: 2026-07-02-bhc-on-webassembly.md
examples/: pattern-match-fib.hs  twice.hs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_module.rs
rts/bhc-rts/: Cargo.toml
rts/bhc-rts-alloc/: Cargo.toml
rts/bhc-rts-arena/: Cargo.toml
rts/bhc-rts-arena/src/: frame.rs  lib.rs
rts/bhc-rts-gc/: Cargo.toml
rts/bhc-rts-scheduler/: Cargo.toml
rts/bhc-rts-scheduler/src/: lib.rs
rts/bhc-rts-scheduler/tests/: m5_exit_criteria.rs
rts/bhc-rts/src/: ffi.rs  lib.rs
spec/: BHC-BRIEF-0001-commons-stage-1.md  BHC-BRIEF-0002-typed-core-ir.md  BHC-REVIEW-0001-architecture-assessment.md  BHC-RFC-0001-the-commons.md  BHC-RFC-0002-content-addressing-and-type-classes.md
stdlib/H26/: BLAS.hs  Bytes.hs  Concurrency.hs  FFI.hs  JSON.hs  Numeric.hs  Prelude.hs  Random.hs  Tensor.hs  Text.hs  Time.hs  Vector.hs
stdlib/bhc-base/: Cargo.toml
stdlib/bhc-base/hs/BHC/Control/: Applicative.hs  Arrow.hs  Category.hs  Monad.hs
stdlib/bhc-base/hs/BHC/Data/: Char.hs  Either.hs  Function.hs  List.hs  Maybe.hs  Ord.hs  String.hs  Tuple.hs
stdlib/bhc-base/src/: char.rs  function.rs  lib.rs  list.rs  monad.rs  string.rs
stdlib/bhc-concurrent/: Cargo.toml
stdlib/bhc-concurrent/hs/BHC/Control/Concurrent/: STM.hs  Scope.hs
stdlib/bhc-concurrent/src/: ffi.rs  lib.rs  scope.rs  stm.rs  task.rs
stdlib/bhc-containers/: Cargo.toml
stdlib/bhc-containers/hs/BHC/Data/: IntMap.hs  IntSet.hs  Map.hs  Sequence.hs  Set.hs
stdlib/bhc-containers/src/: lib.rs  map.rs  set.rs
stdlib/bhc-numeric/: Cargo.toml
stdlib/bhc-numeric/hs/BHC/Numeric/: BLAS.hs  Matrix.hs  SIMD.hs  Tensor.hs  Vector.hs
stdlib/bhc-numeric/hs/BHC/Numeric/Tensor/: Shaped.hs
stdlib/bhc-numeric/src/: arena.rs  blas.rs  blas_accelerate.rs  blas_openblas.rs  decomp.rs  lib.rs  matrix.rs  simd.rs  simd_neon.rs  sparse.rs  tensor.rs  vector.rs
stdlib/bhc-numeric/tests/: blas_tests.rs  fusion_tests.rs  matrix_tests.rs  simd_tests.rs  tensor_tests.rs  vector_tests.rs
stdlib/bhc-prelude/: Cargo.toml
stdlib/bhc-system/: Cargo.toml
stdlib/bhc-text/: Cargo.toml
stdlib/bhc-transformers/: Cargo.toml
stdlib/bhc-utils/: Cargo.toml
tests/: func.hs  let.hs  list.hs
tests/benchmarks/: README.md
tests/conformance/: README.md
tools/bhc-docs/: Cargo.toml
tools/bhci/: Cargo.toml
tools/bhi/: Cargo.toml
(+443 files in other folders)
