[package]
name = "bhc-ast"
description = "Abstract syntax tree definitions for BHC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bhc-span = { workspace = true }
bhc-intern = { workspace = true }
bhc-index = { workspace = true }
bhc-arena = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
