[package]
name = "bhc-codegen"
description = "Code generation backend for BHC (LLVM backend placeholder)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bhc-span = { workspace = true }
bhc-data-structures = { workspace = true }
bhc-target = { workspace = true }
bhc-session = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
