[package]
name = "bhc-data-structures"
description = "Common data structures for the BHC compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustc-hash = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
