[package]
name = "bhc-diagnostics"
description = "Error reporting and diagnostics for BHC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bhc-span = { workspace = true }
thiserror = { workspace = true }
ariadne = { workspace = true }
codespan-reporting = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
