[package]
name = "bhc-driver"
description = "Compilation orchestration and pipeline for BHC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bhc-span = { workspace = true }
bhc-diagnostics = { workspace = true }
bhc-session = { workspace = true }
bhc-query = { workspace = true }
bhc-lexer = { workspace = true }
bhc-ast = { workspace = true }
bhc-parser = { workspace = true }
bhc-target = { workspace = true }
bhc-codegen = { workspace = true }
bhc-linker = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
camino = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
