[package]
name = "bhc-intern"
description = "String interning for efficient symbol handling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
