[package]
name = "bhc-intern"
description = "String interning for efficient symbol handling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints.clippy]
# Intentional inherent methods whose names overlap std traits but have distinct
# semantics; implementing the std trait here would be misleading.
should_implement_trait = "allow"
