[package]
name = "bhc-macros"
description = "Procedural macros for BHC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
pretty_assertions = { workspace = true }
