[package]
name = "bhc-package"
description = "Package management and manifest parsing for BHC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bhc-session = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
