[package]
name = "bhc-parser"
description = "Parser for Haskell 2026 source code"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bhc-span = { workspace = true }
bhc-intern = { workspace = true }
bhc-lexer = { workspace = true }
bhc-ast = { workspace = true }
bhc-diagnostics = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
