[package]
name = "bhc-target"
description = "Target specifications and platform support for BHC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
