[package]
name = "bhc-rts-arena"
description = "Hot arena allocator for the BHC Runtime System"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bhc-rts-alloc = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints.clippy]
# C-ABI / FFI boundary crate: raw-pointer args are the contract; safety is
# documented at the FFI layer.
not_unsafe_ptr_arg_deref = "allow"
