[package]
name = "bhc-rts-scheduler"
description = "Work-stealing task scheduler for the BHC Runtime System"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bhc-rts-alloc = { workspace = true }
crossbeam = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
