[package]
name = "bhc-rts"
description = "Core Runtime System for the Basel Haskell Compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bhc-rts-alloc = { workspace = true }
bhc-rts-arena = { workspace = true }
bhc-rts-gc = { workspace = true }
bhc-rts-scheduler = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints.clippy]
# C-ABI / FFI boundary crate: raw-pointer args are the runtime's contract;
# safety is documented at the FFI layer.
not_unsafe_ptr_arg_deref = "allow"
