[package]
name = "bhc-concurrent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Structured concurrency for BHC: Scope, Task, Channel, STM"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bhc-prelude = { version = "0.2.2", path = "../bhc-prelude" }
crossbeam.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[lints.clippy]
# C-ABI / FFI boundary crate: raw-pointer args are the contract; safety is
# documented at the FFI layer.
not_unsafe_ptr_arg_deref = "allow"
