[package]
name = "bhc-numeric"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Numeric computing for BHC: Tensor, Vector, Matrix, SIMD, BLAS"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bhc-prelude = { version = "0.2.3", path = "../bhc-prelude" }
bhc-rts-arena = { version = "0.2.3", path = "../../rts/bhc-rts-arena" }
bhc-rts-alloc = { version = "0.2.3", path = "../../rts/bhc-rts-alloc" }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[features]
default = ["simd"]
simd = []
blas = []
openblas = ["blas"]
accelerate = ["blas"]  # macOS only - uses Apple Accelerate framework
mkl = ["blas"]
neon = []  # ARM NEON SIMD support (aarch64)

[lints.clippy]
# Numeric kernels deliberately expose inherent ops (add/mul/dot/...) shaped for
# SIMD/BLAS layout rather than the std arithmetic traits (see BHC-RULE-012), and
# the FFI/SIMD entry points take raw pointers as their C-ABI contract.
should_implement_trait = "allow"
not_unsafe_ptr_arg_deref = "allow"
